# wasm_from_rust_workspaces

./: Cargo.toml  LICENSE  README.md  build-wasm
docs/: index.js
docs/pkg/: package.json  wasm_from_lib_workspace_bg.wasm.d.ts
web/: index.html
web/pkg/: package.json  wasm_from_lib_workspace.d.ts  wasm_from_lib_workspace.js  wasm_from_lib_workspace_bg.wasm
workspace/lib/: Cargo.toml
workspace/lib/src/: lib.rs
workspace/wasm/: Cargo.toml
workspace/wasm/src/: lib.rs
