[package]
name = "wasm_from_lib_workspace"
version = "0.1.0"
edition = "2021"

description = "PoC of splitting Rust code to be compiled to wasm into workspaces"
repository = "https://github.com/simon-void/wasm_from_rust_workspaces"
#license = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
lib = { path = "../lib" }
wasm-bindgen = "0.2.80"